--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node --watch src/index.js",
-    "start": "node src/index.js",
+    "dev": "node --watch src/app.js",
+    "start": "node src/app.js",
     "init:timeseries": "node src/scripts/initTimeseries.js",
     "keys:vapid": "node src/scripts/genVapid.js",
     "seed:motiva": "node src/scripts/seed_motiva_limits.js"
