--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "crons": [
     { "path": "/api/heartbeat", "schedule": "*/1 * * * *" }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api" }
   ]
 }
